2016-02-28  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, man/*, gpasm/gpasm.c, gplink/gplink.c,
    gputils/gpdasm.c, gputils/gplib.c, gputils/gpstrip.c,
    gputils/gpvc.c, gputils/gpvo.c:
    Added the description of '-?' option.

  * doc/gputils.lyx, man/gpasm.1.in, gpasm/gpasm.c, gpasm/gpasm.h.in,
    gpasm/gperror.c:
    Patch: #67 Errors with macros dereferenced 
    Tanks to Petr Mikse.

2016-02-27  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c, gputils/gpdasm.c, libgputils/gpcofflink.c:
    Patch: #66 C89 style comments to prevent warnings 
    Tanks to Diego Herranz.

2016-02-22  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/gpasm.c, gpasm/gpasm.h.in, gpasm/scan.l,
    New constant: __WHILE_LOOP_COUNT_MAX

  * gpasm/directive.c, libgputils/gpsymbol.c, libgputils/gpsymbol.h:
    Code formatting.

2016-02-21  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * Makefile.in, */Makefile.in, bootstrap.sh, compile,
    config.guess, config.sub, configure.ac, configure,
    depcomp, install-sh, missing, ylwrap:
    A refresh.

  * gpasm/directive.c, gpasm/directive.h, gpasm/evaluate.c,
    gpasm/evaluate.h, libgputils/gpsymbol.c, libgputils/gpsymbol.h:
    Use logical constants (false, true).

  * gpasm/special.c, libgputils/gphash.c:
    Code formatting.

  * gpasm/directive.c, gpasm/util.c:
    Code simplification.

2016-02-20  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.h.in,
    gpasm/parse.y, gpasm/preprocess.c, gpasm/scan.l:
    New directives: elif, elifdef, elifndef
    These directives can not be used in mpasm compatible mode!

  * gpasm/util.c:
    Bugfix in find_hv_macro() function.

2016-02-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/directive.c, gpasm/gpasm.c,
    gpasm/gpasm.h.in, gpasm/processor.c, gpasm/util.c,